# envire-envire_gis

./: CMakeLists.txt  README.md  manifest.xml
cmake/: EnvireGIS.cmake  enviregis-config.cmake.in
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  EnvireNetwork.cpp  EnvireNetwork.hpp  Main.cpp  Raster.cpp  Raster.hpp  RasterMap.cpp  RasterMap.hpp  RasterPlugin.hpp  RasterPluginBand.hpp
test/: CMakeLists.txt  test_Dummy.cpp  test_Raster.cpp  test_RasterMap.cpp
test/viz/: CMakeLists.txt  test_RasterToElevationViz.cpp
